--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ organizers: "UNCV Organizers"
 
 deadlines:
   - item: Submission deadline
-    date: TBA
+    date: March 14th, 2025
   
   - item: Notification of acceptance
-    date: TBA
+    date: April 1st, 2025
 
   - item: Camera-ready deadline
-    date: TBA
+    date: April 7th, 2025
 
 
 # challengedl:
