--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ organizers: "UNCV Organizers"
 
 deadlines:
   - item: Submission deadline
-    date: March 14th, 2025
+    date: "<s>March 14th, 2025</s> <b>Extended until: March 20th, 2025</b>"
   
   - item: Notification of acceptance
     date: April 1st, 2025
