--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -37,7 +37,7 @@
 - name: Michael Kirchhof
   affiliation: Apple
   abstract: TBA 
-  img: rowan.jpg
+  img: michael.jpg
   url: "https://www.linkedin.com/in/michael-kirchhof/"
 
 - name: Sharon Li
