--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -7,7 +7,7 @@
 - name: Aleksandr Petiushko
   affiliation: Gatik
   abstract: TBA
-  img: alekandr.png
+  img: aleksandr.png
   url: "https://petiushko.info/"
 
 - name: Arash Vahdat
