--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ exclude:
   - .sass-cache
 
 title: "4th Workshop on Uncertainty Quantification for Computer Vision"
-subtitle: "[CVPR 2025 Workshop](https://cvpr.thecvf.com/Conferences/2025) | 11 June 2025"
+subtitle: "[CVPR 2025 Workshop](https://cvpr.thecvf.com/Conferences/2025) | 11th June 2025"
 
 shorttitle: "UNCV Workshop @ CVPR 2025"
 information: "CVPR 2025 Workshop on Uncertainty Quantification for Computer Vision." 
@@ -25,10 +25,10 @@ deadlines:
     date: "<s>March 14th, 2025</s> <b>Extended until: March 20th, 2025</b>"
   
   - item: Notification of acceptance
-    date: April 1st, 2025
+    date: "<s>April 1st, 2025</s>"
 
   - item: Camera-ready deadline
-    date: April 7th, 2025
+    date: "<s>April 7th, 2025</s>"
 
 
 # challengedl:
