--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,8 +4,8 @@
 # - title: Call for Papers
 #   url: /cfp
 
-# - title: BRAVO Challenge
-#   url: /challenge
+- title: BRAVO Challenge
+   url: /challenge
 #
 # - title: Accepted Papers
 #   url: /papers
