--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ deadlines:
 
 challengedl:
   - item: BRAVO Challenge 2025 launch. Submission server is open
-    date: 01/05/2024
+    date: 01/05/2025
 
   - item: 1st submission deadline for CVPR 2025 edition
     date: 06/06/2025
@@ -45,4 +45,4 @@ challengedl:
     date: TBD
 
   - item: Whitepaper contribution deadline
-    date: 27/08/2024
+    date: TBD
