--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -1,11 +1,5 @@
-- name: Anastasios Angelopoulos
-  affiliation: University of California, Berkeley
-  abstract: TBA
-  img: anastasios.jpg
-  url: "https://people.eecs.berkeley.edu/~angelopoulos/about/"
-
 - name: Aleksandr Petiushko
-  affiliation: Gatik
+  affiliation: Elea
   abstract: TBA
   img: aleksandr.png
   url: "https://petiushko.info/"
