--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -1,5 +1,5 @@
 - name: Aleksandr Petiushko
-  affiliation: Elea
+  affiliation: Elea / Nuro (formerly)
   abstract: TBA
   img: aleksandr.png
   url: "https://petiushko.info/"
