minor program edits

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,12 +1,11 @@
 - title: About
   url: /
 
+ - title: Call for Papers
+   url: /cfp
+
 - title: BRAVO Challenge
   url: /challenge
-
-#
-# - title: Call for Papers
-#   url: /cfp
 #
 # - title: Accepted Papers
 #   url: /papers
