--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,11 +4,11 @@
 - title: Call for Papers
   url: /cfp
 
+- title: Accepted Papers
+  url: /papers
+
 - title: BRAVO Challenge
   url: /challenge
-#
-# - title: Accepted Papers
-#   url: /papers
-#
+
 - title: Program
   url: /program
