--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ exclude:
   - .sass-cache
 
 title: "4th Workshop on Uncertainty Quantification for Computer Vision"
-subtitle: "[CVPR 2025 Workshop](https://cvpr.thecvf.com/Conferences/2025) <br> Wednesday, 11th June 2025, Full day"
+subtitle: "[CVPR 2025 Workshop](https://cvpr.thecvf.com/Conferences/2025) <br> Wednesday, 11th June 2025, Full day <br> Room 102 B"
 
 shorttitle: "UNCV Workshop @ CVPR 2025"
 information: "CVPR 2025 Workshop on Uncertainty Quantification for Computer Vision." 
