add missing paper

--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -23,6 +23,10 @@
   authors: Chenyu Han, Corentin Dumery
   type: abstract
 
+- title: "Consensus-Driven Active Model Selection"
+  authors: Justin Kay, Grant Van Horn, Subhransu Maji, Daniel Sheldon, Sara Beery 
+  type: abstract
+
 
 - title: "Spatially-Aware Evaluation of Segmentation Uncertainty"
   authors: Tal Zeevi, Eléonore V. Lieffrig, Lawrence H. Staib, John A Onofrey 
