--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -1,3 +1,7 @@
+- title: "Consensus-Driven Active Model Selection"
+  authors: Justin Kay, Grant Van Horn, Subhransu Maji, Daniel Sheldon, Sara Beery 
+  type: abstract
+
 - title: Improving Optical Flow and Stereo Depth Estimation by understanding learning difficulties
   authors: Jisoo Jeong, Hong Cai, Jamie Menjay Lin, Fatih Porikli  
   type: full
